<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    tools:ignore="ExtraText">

    <EditText
        android:id="@+id/et_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="First Name"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_firstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Last Name"
        android:inputType="text"
        android:freezesText="true"
        android:minHeight="48dp" />


    <EditText
        android:id="@+id/et_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_lastname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="USC Email"
        android:freezesText="true"
        android:inputType="text"
        android:minHeight="48dp"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="Password"
        android:freezesText="true"

        android:inputType="textPassword"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:text="Register" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:text="Login"

        android:layout_marginTop="50dp"
        android:layout_alignParentBottom="true"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/et_password"
            android:text="Student"
            android:checked="true"
            android:textSize="16sp" />

        <RadioButton android:id="@+id/radio_instructor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Instructor"
            android:textSize="16sp" />
    </RadioGroup>
</RelativeLayout>